--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "dev": "concurrently \"vite\" \"node server/index.js\""
+  "build": "vite build",
+  "start": "node server/index.js",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "dev": "concurrently \"vite\" \"node server/index.js\""
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
