--- a/package.json
+++ b/package.json
@@ -4,32 +4,30 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "build": "vite build",
-  "start": "node server/index.js",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "dev": "concurrently \"vite\" \"node server/index.js\""
+    "build": "vite build",
+    "start": "node server/index.js",
+    "dev": "concurrently \"vite\" \"node server/index.js\"",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.6",
+    "express": "^4.19.2",
     "dotenv": "^16.5.0",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
-    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "vite": "^6.3.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "bootstrap": "^5.3.6",
+    "react-bootstrap": "^2.10.10",
+    "vite": "^6.3.5",
     "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^9.1.2",
     "eslint": "^9.25.0",
+    "@eslint/js": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "globals": "^16.0.0"
   }
 }
