--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "globals": "^16.0.0"
+  },
+  "engines": {
+  "node": "18.x"
   }
 }
