--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "dotenv": "^16.5.0",
-    "node-fetch": "^3.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
-    "bootstrap": "^5.3.6",
-    "react-bootstrap": "^2.10.10",
-    "vite": "^6.3.5",
-    "@vitejs/plugin-react": "^4.4.1",
-    "concurrently": "^9.1.2",
-    "eslint": "^9.25.0",
     "@eslint/js": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "globals": "^16.0.0"
+    "@vitejs/plugin-react": "^4.4.1",
+    "bootstrap": "^5.3.6",
+    "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "express": "^4.19.2",
+    "globals": "^16.0.0",
+    "node-fetch": "^3.3.2",
+    "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
+    "vite": "^6.3.5"
   },
   "engines": {
-  "node": "18.x"
+    "node": "18.x"
   }
 }
