--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "vite build",
     "start": "node server/index.js",
-    "dev": "concurrently \"vite\" \"node server/index.js\"",
+    "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview"
   },
